Use new Java 21 features